kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grid-clash
  labels:
    app: grid-clash
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grid-clash
  template:
    metadata:
      labels:
        app: grid-clash
    spec:
      containers:
      - name: grid-clash
        image: ghcr.io/hillaryhardy/devsecops-ci-cd-pipeline-implementation:sha-9751025864db396dbc85881a9c67b9d01d403062
        # Image will be automatically updated by CI/CD pipeline
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: github-container-registry
