kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grid-clash
  labels:
    app: grid-clash
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: grid-clash
